sample registration screen

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,74 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".MainActivity">
 
+    <EditText
+        android:id="@+id/username_editText_registration"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
+        android:background="@android:color/white"
+        android:ems="10"
+        android:hint="Username"
+        android:inputType="textPersonName"
+        android:paddingLeft="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/email_editText_registration"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:background="@android:color/white"
+        android:ems="10"
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        android:paddingLeft="16dp"
+        app:layout_constraintEnd_toEndOf="@+id/username_editText_registration"
+        app:layout_constraintStart_toStartOf="@+id/username_editText_registration"
+        app:layout_constraintTop_toBottomOf="@+id/username_editText_registration" />
+
+    <EditText
+        android:id="@+id/password_editText_registration"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="16dp"
+        android:background="@android:color/white"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPassword"
+        android:paddingLeft="16dp"
+        app:layout_constraintEnd_toEndOf="@+id/email_editText_registration"
+        app:layout_constraintStart_toStartOf="@+id/email_editText_registration"
+        app:layout_constraintTop_toBottomOf="@+id/email_editText_registration" />
+
+    <Button
+        android:id="@+id/signUp_button_registration"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Sign Up"
+        app:layout_constraintEnd_toEndOf="@+id/password_editText_registration"
+        app:layout_constraintStart_toStartOf="@+id/password_editText_registration"
+        app:layout_constraintTop_toBottomOf="@+id/password_editText_registration" />
+
     <TextView
+        android:id="@+id/alreadyHaveAccount_textView_registration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginTop="24dp"
+        android:text="I already have an account"
+        android:textColor="@android:color/white"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/signUp_button_registration"
+        app:layout_constraintStart_toStartOf="@+id/signUp_button_registration"
+        app:layout_constraintTop_toBottomOf="@+id/signUp_button_registration" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
