--- a/app/src/main/res/layout/user_row_new_message.xml
+++ b/app/src/main/res/layout/user_row_new_message.xml
@@ -7,14 +7,13 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/username_textView_user_row_new_message"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="8dp"
-        android:textStyle="bold"
         android:textColor="@android:color/black"
-        android:text="Username"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView"
