--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".RegistrationActivity">
+    tools:context=".view.RegistrationActivity">
 
     <EditText
         android:id="@+id/username_editText_registration"
